# chatgpt-gui

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  org.teunissenstefan.ChatGPT.gschema.xml  style.css
src/confirm_dialog/: imp.rs  mod.rs  style.css
src/message_object/: imp.rs  mod.rs
src/message_row/: imp.rs  mod.rs
src/preferences/: imp.rs  mod.rs
src/resources/: confirm_dialog.ui  message_row.ui  preferences.ui  resources.gresource.xml  window.ui
src/window/: imp.rs  mod.rs
