[package]
name = "chatgpt-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = "0.4.44"
glib = "0.16.7"
gtk = { version = "0.5.5", package = "gtk4", features = ["v4_6"] }
md5 = "0.7.0"
once_cell = "1.17.0"
regex = "1.10"
serde = {version = "1.0.152",  features = ["derive"]}
serde_json = "1.0.91"
whoami = "1.3.0"

[build-dependencies]
glib-build-tools = "0.16.3"
